--- a/controller/Dockerfile
+++ b/controller/Dockerfile
@@ -1,6 +1,8 @@
 
 FROM python:3.9
 WORKDIR /app
-COPY namespace_migration_controller.py .
+COPY controller.py .
 RUN pip install kubernetes
-CMD ["python", "namespace_migration_controller.py"]
+CMD ["python", "controller.py"]
+
+
