--- a/controller/rbac-controller.yaml
+++ b/controller/rbac-controller.yaml
@@ -12,14 +12,47 @@ metadata:
   name: namespace-migration-role
 rules:
   - apiGroups: [""]
-    resources: ["namespaces", "pods", "services", "configmaps", "secrets", "persistentvolumeclaims"]
-    verbs: ["get", "list", "create", "update", "delete"]
+    resources:
+      - namespaces
+      - pods
+      - services
+      - configmaps
+      - secrets
+      - persistentvolumeclaims
+      - persistentvolumes
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - delete
+      - patch
+
   - apiGroups: ["apps"]
-    resources: ["deployments", "statefulsets", "daemonsets", "replicasets"]
-    verbs: ["get", "list", "create", "update", "delete"]
+    resources:
+      - deployments
+      - statefulsets
+      - daemonsets
+      - replicasets
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - delete
+      - patch
+
   - apiGroups: ["migrations.internal"]
-    resources: ["namespacemigrations"]
-    verbs: ["get", "list", "watch", "update"]
+    resources:
+      - namespacemigrations
+    verbs:
+      - get
+      - list
+      - watch
+      - update
+      - patch
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
